--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,5 @@
 {
     "container": "map",
-    "accessToken": "",
+    "accessToken": "pk.eyJ1Ijoicmdhc3RvbiIsImEiOiJJYTdoRWNJIn0.MN6DrT07IEKXadCU8xpUMg",
     "style": "mapbox://styles/mapbox/streets-v9"
 }
