--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,8 @@
 {
     "container": "map",
     "accessToken": "pk.eyJ1Ijoicmdhc3RvbiIsImEiOiJJYTdoRWNJIn0.MN6DrT07IEKXadCU8xpUMg",
-    "style": "mapbox://styles/mapbox/streets-v9"
+    "style": "mapbox://styles/rgaston/cixkupqlu00462rpdjjb29lrx",
+    "zoom": 9.32,
+    "center": [-118.176,33.989],
+    "pitch": 40
 }
